@@ -1,9 +1,5 @@
 AUX bsnes-0.059-makefile.patch 581 RMD160 fb125e239e2eea3b3edc3228bb58e1cb2b40e0fe SHA1 db308465835f4971f5ba6ab38c9714d1187e71e3 SHA256 f7441909f170a79036c1730ca998fd0831405ee96b794eaaddc8f7faaadddde5
-DIST bsnes_v059.tar.bz2 345947 RMD160 36a1897bfb213b91de576703b223e7e72ad286ec SHA1 9a7ae7dffabc2d685f22ccc067a5aec42546448e SHA256 370613e1abb8b20fad792ad8c7af29361f8e3e62847d11671d540396f94a3065
-DIST bsnes_v059r02.zip 5418543 RMD160 12ea528f6272bdb0be63e2b6abaafec99a4d189f SHA1 b635b004c99fc8b96caf3cc1df7131a65202c624 SHA256 c17aa0c7bd6309c839786469312e6c658a5388b1d2de41db956684113c9f04b8
-DIST bsnes_v059r06.zip 5503957 RMD160 9344165ea118592cb8a025c22d080ba9744fcdfb SHA1 42d35fd9781c839c3204705ef347d17976bb45c6 SHA256 918be44846204a04eb7ef3da0d85476a8718f46e6c4023eb94285f6bdaeade14
-EBUILD bsnes-0.059.ebuild 1936 RMD160 c23d8a02df9917cf17e64fad4d4f489b1bf4c5a5 SHA1 a717bcc46c997e973723a8aea08db00ffb13a5e6 SHA256 d1041513b9eab8e1c538b3e57cfb90a262521ce89ffc3ab51d9b5bc4ea737667
-EBUILD bsnes-0.059_p2.ebuild 2652 RMD160 39a37151bf060d34ad5740d2a9194b76a7cbbcf9 SHA1 a0329d9a1a3b838a797193a131b7c396e828358a SHA256 dbb69bf4de4e96e9526f43a0fc5a537ae4afe3af136091e43f85e24350dfaa68
-EBUILD bsnes-0.059_p6.ebuild 2652 RMD160 39a37151bf060d34ad5740d2a9194b76a7cbbcf9 SHA1 a0329d9a1a3b838a797193a131b7c396e828358a SHA256 dbb69bf4de4e96e9526f43a0fc5a537ae4afe3af136091e43f85e24350dfaa68
-MISC ChangeLog 7027 RMD160 1bb5a4769b997ed1e339827788c44e79f95b5824 SHA1 f80c3dcbf2c32bebde45df20d9881234e7f4134f SHA256 c8eaa3ca9a3fb549f7fd153f2eb34a3f7198422f69236ba4fa9b90435fd8cfd3
+DIST bsnes_v060.tar.bz2 735038 RMD160 42fa902764a43fefa50650a743368640bf4400b2 SHA1 7da8f02a1a3258b78774adaaca7db3151f45cbd1 SHA256 c919c101d760d62751a2fe8af112d88fc7203fc98f6a9eccf539e46fd7d6291b
+EBUILD bsnes-0.060.ebuild 2664 RMD160 f14abb438ae4181d9d3ebf25b00b19c75a434e7a SHA1 5989080323a1fbfc183cec388b8bae66fbc40286 SHA256 399dcf18f5c443ba8b2677e0a85c44f5848f2c9811de537136a25e61eb26348c
+MISC ChangeLog 7251 RMD160 ab36aeb70ebeb0afd5b98391845787cf6be2fc9d SHA1 7c43a7100fcf92bf2254fba3450c9190a8343495 SHA256 757126551ee410a0a43fee79aefd6e41f04fe7f818941fa12bb4da4c186485a8
 MISC metadata.xml 566 RMD160 26a851455d9084720b1fa4bac734f22c9541741b SHA1 729bc585b67bad89af5fdb2fc8700a2637082a0f SHA256 5375d24d272cf0bbf3f0d8e38b032888b515c3c66b39d8032faa69a15469b776
